[package]
name = "l34_kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["macros"] }
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
futures-channel = { version = "0.3.31", features = ["sink"] }
futures-util = { version = "0.3.31", features = ["sink"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }
