[package]
name = "l37_redis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-stream = "0.3.6"
axum = { version = "0.7.7", features = ["macros"] }
bitflags = { version = "2.6.0", features = ["serde"] }
bb8 = "0.8.6"
bb8-redis = "0.17.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
dashmap = "6.1.0"
futures = "0.3.31"
redis-macros = "0.4.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
tokio = { version = "1.41.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.redis]
version = "0.27.5"
features = ["tokio-comp", "connection-manager", "json"]
