[package]
name = "task_creator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.19", features = ["derive", "env"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
task = { path = "../task" }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
  "macros",
  "io-util",
  "fs",
  "rt-multi-thread",
  "net",
] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }
